--- a/projects/tunecity.html
+++ b/projects/tunecity.html
@@ -20,7 +20,7 @@
         <div class="container">
             <h2 class="center-text">TuneCity | Top rated songs about your city!</h2>
             <input autocomplete="off" placeholder="Search here..." class="input-lg" type="text" id="search" autofocus></input>
-            <img id="album-img" class="topcorner" src=""></img>
+            <img id="album-img" onclick="border" class="topcorner" src=""></img>
         </div>
         <div class="container-fluid" id="song-info">
             <h4 class="center-text" id="now-playing"></h4>
