change about section, small changes to app files

--- a/projects/tunecity.html
+++ b/projects/tunecity.html
@@ -21,10 +21,10 @@
     <div id='map'></div>
         <div class="container">
             <h2 class="center-text">TuneCity | Top rated songs about your city!</h2>
-
+            <div id="inputAndButton">
             <input autocomplete="off" placeholder="Search here..." class="input-lg" type="search" id="search" autofocus></input>
             <button class='btn btn-primary' id="random">Random</button>
-
+            </div>
             <img id="album-img" class="topcorner" src=""><audio id="song" src=""></audio></img>
         </div>
 
