--- a/about.html
+++ b/about.html
@@ -39,23 +39,14 @@
     </nav>
 
     <div class="container">
-
-      <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
         <h1 class="text-center">About me...</h1>
         <p>Aspiring web development engineer</p>
-        <p>Climber, biker, skiier, adventurer
-        </p>
-        <p>Interested in data analysis, visualization, and machine learning</p>
-      
+        <p>Climber, biker, skiier, adventurer</p>
+        <p>Interested in merging environmental conservation with web development</p>
       </div>
+    </div> 
 
-    </div> <!-- /container -->
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="../docs/dist/js/bootstrap.min.js"></script>
