--- a/projects/tunecity.html
+++ b/projects/tunecity.html
@@ -25,7 +25,7 @@
             <input autocomplete="off" placeholder="Search here..." class="input-lg" type="search" id="search" autofocus></input>
             <button class='btn btn-primary' id="random">Random</button>
             </div>
-            <img id="album-img" class="topcorner" src=""><audio id="song" src=""></audio></img>
+            <img id="album-img" class="topcorner" src="" alt="album art"><audio id="song" src=""></audio></img>
         </div>
 
         <div class="container-fluid" id="song-info">
