change anchor tag

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
         <p>Aspiring web development engineer</p>
         <p>Climber, biker, skiier, adventurer</p>
         <p>Interested in merging environmental conservation with web development</p>
-        <p><a href="resume.pdf" target="blank">Resume</a></p>
+        <p><a href="resume.pdf" target="blank" download="trevorBurkeResume">Resume</a></p>
       </div>
     </div> 
 
