add styling and js for playlist tracker

--- a/about.html
+++ b/about.html
@@ -38,16 +38,22 @@
       </div>
     </nav>
 
-    <div class="container">
+    <div class="container-fluid">
       <div class="jumbotron">
-        <h1 class="text-center">About me...</h1>
-        <p>Aspiring web development engineer</p>
-        <p>Climber, biker, skiier, adventurer</p>
-        <p>Interested in merging environmental conservation with web development</p>
-        <p><a href="resume.pdf" target="blank" download="trevorBurkeResume">Resume</a></p>
+        <div class="row">
+            <h1 class="text-center">About me...</h1>
+          <div class="col-md-5">
+            <p>Aspiring web development engineer</p>
+            <p>Climber, biker, skiier, adventurer</p>
+            <p>Interested in merging environmental conservation with web development</p>
+            <p><a href="resume.pdf" target="blank" download="trevorBurkeResume">Resume</a></p>
+          </div>
+          <div class="col-md-6" style="float: right; margin: 0 0 5px 5px;">
+            <img src="images/tam.jpg" height="395" width="400">
+          </div>
+        </div>
       </div>
     </div> 
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="../docs/dist/js/bootstrap.min.js"></script>
