--- a/projects/tunecity.html
+++ b/projects/tunecity.html
@@ -22,10 +22,19 @@
         <div class="container">
             <h2 class="center-text">TuneCity | Top rated songs about your city!</h2>
             <div id="inputAndButton">
-            <input autocomplete="off" placeholder="Search here..." class="input-lg" type="search" id="search" autofocus></input>
-            <button class='btn btn-primary' id="random">Random</button>
+                <input autocomplete="off" placeholder="Search here..." class="input-lg" type="search" id="search" autofocus></input>
+                <button class='btn btn-primary' id="random">Random</button>
             </div>
+            <div id="album-div">
             <img id="album-img" class="topcorner" src=""><audio id="song" src=""></audio></img>
+            </div>
+        </div>
+
+        <div id="playlist-scrollbox" >
+            <h5>Playlist: </h5>
+            <div id="playlist-list">
+            </div>
+
         </div>
 
         <div class="container-fluid" id="song-info">
