--- a/projects/tunecity.html
+++ b/projects/tunecity.html
@@ -33,6 +33,8 @@
         <div id="playlist-scrollbox" >
             <h5>Playlist: </h5>
             <div id="playlist-list">
+                <ol id="p-list">
+                </ol>
             </div>
 
         </div>
